Added missing /conversions/* endpoints and fixed swagger docs.
