# src/main/resources/swagger.yaml
@@ -11,8 +11,8 @@ info:
   license:
     name: University of Illinois/NCSA Open Source License
     url: 'https://opensource.org/licenses/NCSA'
-  version: 0.2.0
-host: bd-api.ncsa.illinois.edu
+  version: 0.2.1
+host: bd-api-dev.ncsa.illinois.edu
 basePath: /v1
 schemes:
   - https
@@ -166,8 +166,8 @@ paths:
             $ref: '#/definitions/Error'
   /events/latest:
     get:
-      summary: Get latest n events.
-      description: 'Get latest n events, where n is specified as a query parameter.'
+      summary: Get latest n events (Requires ADMIN).
+      description: 'Get latest n events, where n is specified as a query parameter. Requires administrator privileges'
       tags:
         - Events
       security:
@@ -178,6 +178,7 @@ paths:
           in: query
           description: How many events to show
           required: false
+          default: 100
           type: integer
       responses:
         '200':
@@ -186,6 +187,55 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Event'
+        '401':
+          $ref: '#/responses/UnauthorizedError'
+        '429':
+          $ref: '#/responses/TooManyRequestsError'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /events/{id}:
+    get:
+      summary: Get specific event (Requires ADMIN).
+      description: 'Get specific event. Requires administrator privileges'
+      tags:
+        - Events
+      security:
+        - TokenHeader: []
+        - TokenQueryParam: []
+      parameters:
+        - name: id
+          in: path
+          description: Event id.
+          type: string
+      responses:
+        '200':
+          description: Event information
+          schema:
+            $ref: '#/definitions/Event'
+        '401':
+          $ref: '#/responses/UnauthorizedError'
+        '429':
+          $ref: '#/responses/TooManyRequestsError'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /stats:
+    get:
+      summary: Get server statistics (Requires ADMIN).
+      description: 'Get server statistics. Requires administrator privileges'
+      tags:
+        - Admin
+      security:
+        - TokenHeader: []
+        - TokenQueryParam: []
+      responses:
+        '200':
+          description: Statistics.
+          schema:
+            $ref: '#/definitions/Statistics'
         '401':
           $ref: '#/responses/UnauthorizedError'
         '429':
@@ -228,7 +278,7 @@ paths:
         - TokenHeader: []
         - TokenQueryParam: []
       produces:
-        - text/html
+        - text/plain
       responses:
         '200':
           description: An array of available input file formats
@@ -273,6 +323,8 @@ paths:
       security:
         - TokenHeader: []
         - TokenQueryParam: []
+      produces:
+        - text/plain
       responses:
         '200':
           description: An array of available output file formats
@@ -284,7 +336,7 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  '/conversions/{output_format}':
+  '/conversions/outputs/{output_format}':
     get:
       summary: List all input formats that can reach the specified output format
       description: List all input formats that can reach the specified output format
@@ -310,6 +362,7 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  '/conversions/{output_format}':
     post:
       summary: Convert the uploaded file to the requested output format
       description: |
@@ -326,10 +379,8 @@ paths:
           type: string
         - name: body
           in: body
-          required: true
-          schema:
-            type: string
-            format: binary
+          type: file
+          description: The file to upload.
       security:
         - TokenHeader: []
         - TokenQueryParam: []
@@ -420,6 +471,8 @@ paths:
         List all available conversion software
       tags:
         - Conversions
+      produces:
+        - text/plain
       responses:
         '200':
           description: An array of available conversion software
@@ -444,6 +497,8 @@ paths:
           type: string
       tags:
         - Conversions
+      produces:
+        - text/plain
       responses:
         '200':
           description: An array of available output formats
@@ -463,7 +518,7 @@ paths:
       parameters:
         - name: software
           in: path
-          description: Software name.
+          description: Software name. For example ImageMagick.
           required: true
           type: string
         - name: output_format
@@ -471,6 +526,8 @@ paths:
           description: Output format. For example jpg.
           required: true
           type: string
+      produces:
+        - text/plain
       tags:
         - Conversions
       responses:
@@ -509,6 +566,12 @@ paths:
             example PEcAn.
           required: false
           type: string
+        - name: body
+          in: body
+          type: file
+          description: The file to upload.
+      produces:
+        - text/plain
       tags:
         - Conversions
       responses:
@@ -522,43 +585,43 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  '/conversions/software/{software}/{output_format}/{file_url}':
-    get:
-      summary: >-
-        Convert the specified file to the requested output format using the
-        specified software
-      description: >
-        Convert the specified file to the requested output format using the
-        specified software
-      parameters:
-        - name: software
-          in: path
-          description: Software name.
-          required: true
-          type: string
-        - name: output_format
-          in: path
-          description: Output format. For example jpg.
-          required: true
-          type: string
-        - name: file_url
-          in: path
-          description: URL encoded remote file URL
-          required: true
-          type: string
-      tags:
-        - Conversions
-      responses:
-        '200':
-          description: An array of available conversion software
-          schema:
-            type: array
-            items:
-              type: string
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
+#  '/conversions/software/{software}/{output_format}/{file_url}':
+#    get:
+#      summary: >-
+#        Convert the specified file to the requested output format using the
+#        specified software
+#      description: >
+#        Convert the specified file to the requested output format using the
+#        specified software
+#      parameters:
+#        - name: software
+#          in: path
+#          description: Software name.
+#          required: true
+#          type: string
+#        - name: output_format
+#          in: path
+#          description: Output format. For example jpg.
+#          required: true
+#          type: string
+#        - name: file_url
+#          in: path
+#          description: URL encoded remote file URL
+#          required: true
+#          type: string
+#      tags:
+#        - Conversions
+#      responses:
+#        '200':
+#          description: An array of available conversion software
+#          schema:
+#            type: array
+#            items:
+#              type: string
+#        default:
+#          description: Unexpected error
+#          schema:
+#            $ref: '#/definitions/Error'
   /conversions/servers:
     get:
       summary: List all currently available Software Servers
@@ -566,6 +629,8 @@ paths:
         List all currently available Software Servers
       tags:
         - Conversions
+      produces:
+        - text/plain
       responses:
         '200':
           description: An array of available conversion software servers
@@ -1704,6 +1769,8 @@ definitions:
       - resource
       - eventType
       - user
+  Statistics:
+    type: object
   Success:
     type: object
     properties:
